--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^3.2.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.28",
+    "lodash": "^4.17.21",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +20,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
