--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.2.2",
     "typewriter-effect": "^2.21.0"
   },
