--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "ai-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tabler/icons-react": "^3.2.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.28",
-    "lodash": "^4.17.21",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.5",
-    "tailwind-merge": "^2.2.2",
-    "typewriter-effect": "^2.21.0"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.17.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1",
-    "postcss": "^8",
-    "postcss-lit": "^1.1.1",
-    "stylelint": "^16.3.1",
-    "stylelint-config-recess-order": "^5.0.0",
-    "stylelint-config-standard": "^36.0.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "ai-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"clsx": "^2.1.0",
+		"framer-motion": "^11.0.28",
+		"lodash": "^4.17.21",
+		"next": "14.2.1",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.51.5",
+		"react-icons": "^5.2.1",
+		"tailwind-merge": "^2.2.2",
+		"typewriter-effect": "^2.21.0"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.17.4",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.1",
+		"postcss": "^8",
+		"postcss-lit": "^1.1.1",
+		"stylelint": "^16.3.1",
+		"stylelint-config-recess-order": "^5.0.0",
+		"stylelint-config-standard": "^36.0.0",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
