--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"clsx": "^2.1.0",
@@ -27,12 +28,25 @@
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.1",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-unused-imports": "^4.0.1",
+		"husky": "^9.1.4",
+		"lint-staged": "^15.2.8",
 		"postcss": "^8",
 		"postcss-lit": "^1.1.1",
+		"prettier": "^3.3.3",
 		"stylelint": "^16.3.1",
 		"stylelint-config-recess-order": "^5.0.0",
 		"stylelint-config-standard": "^36.0.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx,md,html}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"*.css": "stylelint",
+		"*.scss": "stylelint --syntax=scss"
 	}
 }
